--- a/components/webserver/CMakeLists.txt
+++ b/components/webserver/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "webserver.c"
+idf_component_register(SRCS "webserver.cpp"
                     INCLUDE_DIRS "."
                     REQUIRES esp_http_server esp32-camera led_control) 
