--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.cpp"
                     INCLUDE_DIRS "."
-                    REQUIRES webserver led_control esp32-camera esp_wifi nvs_flash) 
+                    REQUIRES webserver esp32-camera esp_wifi nvs_flash) 
