--- a/components/webserver/CMakeLists.txt
+++ b/components/webserver/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "webserver.cpp"
+idf_component_register(SRCS "webserver.cpp" "camera.cpp"
                     INCLUDE_DIRS "."
                     EMBED_FILES "main_page.html"
                     REQUIRES esp_http_server esp32-camera inference)
