--- a/components/camera/CMakeLists.txt
+++ b/components/camera/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "camera.cpp"
                     INCLUDE_DIRS "."
-                    REQUIRES esp32-camera) 
+                    REQUIRES esp32-camera inference) 
