--- a/components/monitor/CMakeLists.txt
+++ b/components/monitor/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "monitor.cpp"
     INCLUDE_DIRS "include"
-    REQUIRES freertos esp_system esp_timer spi_flash esp_partition
+    REQUIRES freertos esp_system esp_timer spi_flash esp_partition app_update nvs_flash
 ) 
