--- a/Notebooks/yolo11n_saved_model/metadata.yaml
+++ b/Notebooks/yolo11n_saved_model/metadata.yaml
@@ -1,6 +1,6 @@
 description: Ultralytics YOLO11n model trained on /usr/src/ultralytics/ultralytics/cfg/datasets/coco.yaml
 author: Ultralytics
-date: '2025-07-24T17:31:56.284715'
+date: '2025-07-25T16:11:31.243797'
 version: 8.3.169
 license: AGPL-3.0 License (https://ultralytics.com/license)
 docs: https://docs.ultralytics.com
@@ -8,8 +8,8 @@ stride: 32
 task: detect
 batch: 1
 imgsz:
-- 320
-- 320
+- 640
+- 640
 names:
   0: person
   1: bicycle
@@ -95,6 +95,6 @@ args:
   batch: 1
   fraction: 1.0
   half: false
-  int8: false
+  int8: true
   nms: false
 channels: 3
