cleaning notebooks + use ultralytics library for inference + add esp-detection library

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -18,3 +18,4 @@ dependencies:
   espressif/esp-dl: '*'
   espressif/human_face_detect: '*'
   espressif/esp-tflite-micro: '*'
+  espressif/esp-detection: '*'
