--- a/Notebooks/requirements.txt
+++ b/Notebooks/requirements.txt
@@ -1,21 +1,22 @@
 # Core ML libraries
-tensorflow>=2.14.0
-torch>=2.0.0
-torchvision>=0.15.0
+tensorflow>=2.20.0rc0
+torch>=2.2.0
+torchvision>=0.17.0
 tensorflow-hub>=0.16.1
 
 # Computer Vision
-opencv-python>=4.8.0
+opencv-python==4.11.0.86
 pillow>=9.0.0
 
 # YOLO and ONNX
-ultralytics>=8.0.0
-onnx>=1.14.0
-onnxruntime>=1.15.0
+ultralytics>=8.3.112
+onnx==1.17.0
+onnxsim==0.4.36
+onnxruntime>=1.6.0
 onnx2tf>=1.0.0
 
 # Data processing
-numpy>=1.24.0
+numpy>=1.26.0
 pandas>=2.0.0
 scipy>=1.10.0
 
@@ -28,4 +29,7 @@ ipykernel>=6.0.0
 
 # Utilities
 tqdm>=4.65.0
-requests>=2.31.0 
+requests>=2.31.0
+
+# ESP-Detection dependencies
+git+https://github.com/espressif/esp-ppq
