try to deploy yolo11n.espdl with esp_ppq quantization, fail to init

--- a/components/inference/CMakeLists.txt
+++ b/components/inference/CMakeLists.txt
@@ -1,9 +1,19 @@
+idf_build_get_property(component_targets __COMPONENT_TARGETS)
+if ("___idf_espressif__esp-dl" IN_LIST component_targets)
+    idf_component_get_property(espdl_dir espressif__esp-dl COMPONENT_DIR)
+elseif("___idf_esp-dl" IN_LIST component_targets)
+    idf_component_get_property(espdl_dir esp-dl COMPONENT_DIR)
+endif()
+set(cmake_dir ${espdl_dir}/fbs_loader/cmake)
+include(${cmake_dir}/utilities.cmake)
+set(embed_files yolo11n.espdl)  # Cambiato da models/yolo11n.espdl
+
 idf_component_register(
     SRCS "inference.cpp"
     INCLUDE_DIRS "include"
     REQUIRES esp-dl esp32-camera esp_new_jpeg human_face_detect monitor esp-tflite-micro
-               EMBED_FILES "models/yolo11n_float32.tflite"
 )
+target_add_aligned_binary_data(${COMPONENT_LIB} ${embed_files} BINARY)
 
 # Aggiungi il path di include per human_face_detect
 target_include_directories(${COMPONENT_LIB} PRIVATE models/human_face_detect)
@@ -12,4 +22,4 @@ target_include_directories(${COMPONENT_LIB} PRIVATE models/human_face_detect)
 target_include_directories(${COMPONENT_LIB} PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/models
-) 
+)
